# binarygcode

./: Cargo.toml  README.md  rustfmt.toml
examples/: heatshrink_test.rs  read_file.rs  read_headers.rs  serde_file.rs  serialise_file.rs  stream_file.rs
src/: block.rs  common.rs  convert.rs  deserialiser.rs  header.rs  lib.rs  main.rs  serialiser.rs  tests.rs
src/components/: common.rs  convert.rs  deserialiser.rs  mod.rs  serialiser.rs  tests.rs
src/src/: common.rs  convert.rs  lib.rs  serialiser.rs  tests.rs
test_files/: mini_cube_b.gcode  mini_cube_ps2.8.1.gcode
