[package]
name = "binarygcode"
version = "0.0.3"
edition = "2024"
license = "MIT"
authors = ["James Gopsill"]
description = "A Rust implementation of libbgcode to serialise and deserialise binary gcode."
repository = "https://github.com/jamesgopsill/binarygcode"
readme = "README.md"
keywords = ["gcode", "MEX", "FDM", "3d_printing", "deserialise", "serialise"]
documentation = "https://docs.rs/binarygcode"
categories = ["no-std", "parsing", "parser-implementations", "compression"]
exclude = ["/tmp", "/test_files"]

[dependencies]
embedded-heatshrink = "0.1.0"
meatpack = { version = "0.0.3", features = ["alloc"] }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
miniz_oxide = "0.8.8"
regex = { version = "1.11.1", default-features = false, features = [
    "unicode-perl",
] }
thiserror = { version = "2.0.12", default-features = false }
clap = { version = "4.5.35", features = ["derive"] }
